@@ -1,3 +1,6 @@
+3584.	[security]	Caching data from an incompletely signed zone could
+			trigger an assertion failure in resolver.c [RT #33690]
+
 3583.	[bug]		Address memory leak in GSS-API processing [RT #33574]
 
 3582.	[bug]		Silence false positive warning regarding missing file
